2012-09-01
	add lib.version
	pass rijndael_obj instead of rijndael_key to general.encode/decode
	add MAX_USER_ID, MAX_PC_ID, MAX_PET_ID, MAX_MONSTER_ID
	fix monster.spawn/delete error
	use general.make_id to generate user and pc id when create

2012-08-26
	use system encoding for all log
	move general.Null to general.NullClass
	remove lib/unit_test (no longer use)

2012-08-24
	add type info in database row map (not use _detect_type any more)
	add version info in database dump
	database format version 1.1.0

2012-08-23
	add script.petmotion and command /petmotion motion_id motion_loop
	add script.petmotion_loop and command /petmotion_loop motion_id

2012-08-23
	update db to 345
	add dbmap, change database dump format from raw_list to raw_dict {id: __dict__}
	(auto generate attribute location and boost startup speed)
	add script.size and command /size pc_size
	add script.petstandby_on and command /petstandby_on
	add script.petstandby_off and command /petstandby_off

2012-08-02
	make dump files load and save with pyc format (if DUMP_WITH_ZLIB off)

2012-07-26
	update db to 343
	fix pc look sync problem

2012-07-21
	support drop and pick up item
	add general.make_id
	move monster.send_map to script.send_map
	add script.send_map_obj(map_obj, without_list, *args)
	add script.send_server(*args)
	add PC.item_append, item_pop, warehouse_append, warehouse_pop with system message
	remove script.item_object_add (PC.item_append instead of)
	clean up code

2012-07-20
	support pc to pc trade (unstable)
	fix script.setgold, npcmotion, npcshop, npcsell affect other pc on the same map

2012-07-17
	add general.secure_open replace __builtin__.open
	add general.secure_listdir replace os.listdir
	add general.secure_remove replace os.remove
	add general.secure_rmdir replace os.rmdir
	add general.secure_mkdir replace os.mkdir
	disable os.link, os.symlink
	add general.secure_rename replace os.rename
	add general.secure_chdir
	add general.secure_chmod replace os.chmod