@@ -6,7 +6,8 @@ loginevent = 30
 loginserverport = 13000
 mapserverport = 13001
 webserverport = 13100
-serveraddress = localhost
+serverbindip = 0.0.0.0
+serverpublicip = localhost
 
 [gmlevel]
 run = 100
